<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01164A"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="421dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:layout_marginBottom="85dp">

        <TextView
            android:id="@+id/nameInput"
            android:layout_width="259dp"
            android:layout_height="47dp"
            android:background="#c5f776"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/EmailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="261dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="#c5f776"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/PhoneInput"
            app:layout_constraintEnd_toEndOf="@+id/PhoneInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/PhoneInput"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" />

        <EditText
            android:id="@+id/PhoneInput"
            android:layout_width="261dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="#c5f776"
            android:ems="10"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:textColorHint="#A18F8F"
            app:layout_constraintBottom_toTopOf="@+id/domainInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/domainInput"
            app:layout_constraintTop_toBottomOf="@+id/EmailInput" />

        <TextView
            android:id="@+id/domainInput"
            android:layout_width="263dp"
            android:layout_height="48dp"
            android:background="#c5f776"
            android:hint="@string/domain"
            android:textColorHint="FFA18F8F"
            app:layout_constraintBottom_toTopOf="@+id/subdomainInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PhoneInput" />

        <TextView
            android:id="@+id/subdomainInput"
            android:layout_width="264dp"
            android:layout_height="47dp"
            android:background="#c5f776"
            android:hint="@string/sub_domain"
            android:textColorHint="#A37E7E"
            app:layout_constraintBottom_toTopOf="@+id/skillInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domainInput" />

        <TextView
            android:id="@+id/skillInput"
            android:layout_width="261dp"
            android:layout_height="47dp"
            android:background="#c5f776"
            android:hint="@string/skills"
            android:textColorHint="#937777"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subdomainInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/appnameInput"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:layout_marginBottom="523dp"
        android:background="#B14D4D"
        android:text="@string/code_chef"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="132dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="566dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/index"
        android:contentDescription="@string/todo" />


</RelativeLayout>
